<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    android:id="@+id/frame"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".FullscreenActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:id="@+id/fullscreen_content">

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:layout_weight="1" />
        <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:rowCount="3"
                android:columnCount="7"
                android:layout_gravity="fill"
                android:layout_weight="1">
            <Space
                android:layout_column="0"
                android:layout_row="0"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"/>
            <Button
                android:id="@+id/button_prevsong"
                android:layout_column="1"
                android:layout_row="0"
                android:layout_gravity="fill"
                android:text="@string/prev_song"/>
            <Space
                android:layout_column="2"
                android:layout_row="0"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"/>
            <Button
                android:id="@+id/button_play"
                android:layout_column="3"
                android:layout_row="0"
                android:layout_gravity="fill"
                android:text="@string/play"
                android:textSize="100sp"/>
            <Space
                android:layout_column="4"
                android:layout_row="0"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"/>
            <Button
                android:id="@+id/button_nextsong"
                android:layout_column="5"
                android:layout_row="0"
                android:layout_gravity="fill"
                android:text="@string/next_song"/>
            <Space
                android:layout_column="6"
                android:layout_row="0"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"/>
            <Space
                android:layout_column="0"
                android:layout_row="1"
                android:layout_rowWeight="1"
                android:layout_gravity="fill"/>
            <Space
                android:layout_column="0"
                android:layout_row="2"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"/>
            <Button
                android:id="@+id/button_prevrecord"
                android:layout_column="1"
                android:layout_row="2"
                android:layout_gravity="fill"
                android:text="@string/prev_record"/>
            <Space
                android:layout_column="2"
                android:layout_row="2"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"/>
            <Button
                android:id="@+id/button_stop"
                android:layout_column="3"
                android:layout_row="2"
                android:layout_gravity="fill"
                android:text="@string/stop"
                android:textSize="100sp"/>
            <Space
                android:layout_column="4"
                android:layout_row="2"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"/>
            <Button
                android:id="@+id/button_nextrecord"
                android:layout_column="5"
                android:layout_row="2"
                android:layout_gravity="fill"
                android:text="@string/next_record"/>
            <Space
                android:layout_column="6"
                android:layout_row="2"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"/>
        </GridLayout>
        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:layout_weight="1" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="fill"
            android:weightSum="20">
            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="fill"
                android:layout_weight="1.5" />
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="fill"
                android:layout_weight="16"
                android:weightSum="2"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/track_title"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:ellipsize="end"
                    android:gravity="center_vertical"
                    android:lines="1"
                    android:layout_weight="1"
                    android:textSize="30sp"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:weightSum="10">
                    <TextView
                        android:id="@+id/record"
                        android:layout_width="0dp"
                        android:lines="1"
                        android:ellipsize="end"
                        android:layout_height="match_parent"
                        android:layout_weight="8"
                        android:gravity="center_vertical"
                        android:textSize="30sp"/>
                    <TextView
                        android:id="@+id/timecode"
                        android:text="00:00"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:layout_weight="2"
                        android:textSize="50sp"/>
                </LinearLayout>

            </LinearLayout>
            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="fill"
                android:layout_weight="1" />
            <Button
                android:id="@+id/button_power"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/off"
                android:textSize="100sp"/>
            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="fill"
                android:layout_weight="2" />
        </LinearLayout>
        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="fill"
            android:layout_weight="1" />
    </LinearLayout>
</FrameLayout>